<resources>
    <string name="app_name">eTeachSwayam</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="back">Back</string>
    <string name="video_title">Title</string>
    <string name="notification_catalog_downloaded">Downloading Please Wait </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="my_profile">My Profile</string>
    <string name="activate_now">Activate Now</string>
    <string name="storage">Storage</string>
    <string name="transfer_content">Transfer Content</string>
    <string name="updates">Updates</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="supports">Supports</string>
    <string name="about_us">About Us</string>
    <string name="helps">Help</string>
    <string name="logout">Logout</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="array_board">
        <item>CBSE</item>
        <item>ICSE</item>
        <item>STATE</item>
    </string-array>
    <string-array name="arry_medium">
        <item>English</item>
    </string-array>
    <string-array name="arry_class">
        <item>Class I</item>
        <item>Class II</item>
        <item>Class III</item>
        <item>Class IV</item>
        <item>Class V</item>
        <item>Class VI</item>
        <item>Class VII</item>
        <item>Class VIII</item>
        <item>Class IX</item>
        <item>Class X</item>
        <item>Class XI</item>
        <item>Class XII</item>
    </string-array>
    <string-array name="arry_subject">
        <item>SCIENCE</item>
        <item>MATHS</item>
        <item>GK</item>
        <item>SOCIAL STUDIES</item>
        <item>COMPUTER</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prompt_email">Email Id</string>
    <string name="prompt_password">Password</string>
    <string name="log_in">Log In</string>
    <string name="btnRegister">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email1">User Id</string>
    <string name="prompt_password1">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in....</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">password must contain at least 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="des">Add New User</string>
</resources>