<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg02"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="hellow"
            android:textSize="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D8000000"
        android:orientation="vertical">



    <!-- Login progress -->

    <!--<ProgressBar android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />-->

    <ScrollView android:id="@+id/svLoginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="center">

            <LinearLayout android:id="@+id/wel_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Welcome"
                    android:textSize="40dp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/txtWelCome"
                    />
            </LinearLayout>

            <LinearLayout android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                   <!-- <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_user"
                        android:layout_gravity="center_horizontal|center"
                        />-->

                <EditText android:id="@+id/etEmailIdLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:background="@drawable/border_yellow"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#97946B"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                   <!-- <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_pass"
                        android:layout_gravity="center_horizontal|center"
                        />-->

                <EditText android:id="@+id/etPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:background="@drawable/border_yellow"
                    android:padding="10dp"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textColorHint="#97946B"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"/>
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnLogin"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/PrimaryColor"
                        android:text="@string/log_in"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnRegister"

                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/PrimaryColor"
                        android:text="@string/btnRegister"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_register_in_button"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <CheckBox
                        android:id="@+id/cbLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:checked="true"
                        android:text="Keep me logged in"
                        android:textColor="#5a9aa8"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="Forgot password ?"
                        android:textColor="#5a9aa8"
                        android:textSize="15sp"
                        />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    </LinearLayout>
        </RelativeLayout>
</RelativeLayout>
